[project]
name = "bioasq-rag-data-processing"
version = "0.1.0"
description = "Dataset processing module for BioASQ RAG project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.30.1",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.9.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
